cfg + sh minor changes

--- a/3proxy.cfg
+++ b/3proxy.cfg
@@ -35,7 +35,7 @@ rotate 1
 #added authentication caching to make life easier
 authcache user 60
 
-# Start new ACLs
+#Start new ACLs
 #enable strong authorization. To disable authentication, simply change to 'auth none'
 auth strong cache
 #restrict access for ports via http(s)-proxy and deny access to local interfaces
@@ -47,13 +47,13 @@ allow * * * 443,8443 HTTPS
 #allow * * * 1-65535 HTTPS
 
 #HTTP Proxy
-# Use default ACLs, don't need to flush
-proxy -n -p9999 -a
+#Use default ACLs, don't need to flush
+proxy -n -p41589 -a
 
-#SOCKS
+#SOCKS Proxy
 flush
 auth strong cache
-socks -p8088
+socks -p51589
 
 #Enable admin web-ui on specified port, only allow connection from loopback interface (127.0/8) & intranet's admin user (10/8)
 flush
